# LIO_SAM_6AIXS

./: CMakeLists.txt  README.md
LIO-SAM-6AXIS/: CMakeLists.txt
LIO-SAM-6AXIS/config/: GREAT_campus01.yaml  GREAT_ourdata.yaml  GREAT_ourdata_mems.yaml  GREAT_ourdata_tactical.yaml  GREAT_suburb02.yaml  GREAT_urban01.yaml  GREAT_urban02.yaml  params_kitti_0930.yaml  params_miaopu_cao.yaml  params_miaopu_qian.yaml  params_miaopu_yuan.yaml  params_suidao.yaml  params_youyi.yaml
LIO-SAM-6AXIS/data/hkust_campus/: odom_tum.txt  optimized_odom_tum.txt  pose_graph.g2o  times.txt
LIO-SAM-6AXIS/include/: dataSaver.h  pointRegistration.h  utility.h
LIO-SAM-6AXIS/launch/: GREAT_campus01.launch  GREAT_oursdata_0103.launch  GREAT_oursdata_mems.launch  GREAT_oursdata_tactical.launch  GREAT_suburb2.launch  GREAT_urban01.launch  GREAT_urban02.launch  kitti_0930_0028.launch  miaopu_cao.launch  miaopu_qian.launch  suidao.launch  youyi.launch  yuan.launch
LIO-SAM-6AXIS/launch/include/: module_loam_roadSide.launch
LIO-SAM-6AXIS/launch/include/config/: vlp.rviz
LIO-SAM-6AXIS/msg/: road_registration.msg
LIO-SAM-6AXIS/scripts/: GetInitialnTransForm.py  callAllCommand.py  plotHessian.py  transformServiceNode.py
LIO-SAM-6AXIS/scripts/geoFunc/: const_value.py  data_utils.py  trans.py
LIO-SAM-6AXIS/src/: dataSaver.cpp  featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmizationGps.cpp  roadSide.cpp
LIO-SAM-6AXIS/srv/: transformInterp.srv
